# mind_the_gaps

./: .gitignore  CITATION.cff  LICENSE.md  README.md  celerite_models.py  celerite_script.py  celerite_variance.ipynb  generate_lc.py  generate_strategy.py  model_selection.lc  pyproject.toml  readingutils.py  setup.py  simulator.py  simulator_test.py  stats_test.py  utils.py
.github/workflows/: ci.yml  docs.yml  test.yml
celerite_config/: matern.config  parameters_granulation.config  parameters_qpo.config  parameters_qpo_fixedQ.config  parameters_qpo_granulation.config  parameters_qpo_jitter.config  parameters_sho.config
docs/: Makefile  conf.py  example_use_post_refactor.py  examples.md  index.md  proposed_oo_refactor.drawio  requirements.txt  structure.md  workflow.drawio  workflow.md
docs/notebooks/: celerite_variance.ipynb  lomb_scargle_biases.ipynb  poisson_level.ipynb  tutorial_model_selection.ipynb  tutorial_ppp.ipynb
docs/source/: conf.py  index.rst  mind_the_gaps.engines.rst  mind_the_gaps.gp.rst  mind_the_gaps.lightcurves.rst  mind_the_gaps.models.celerite.rst  mind_the_gaps.models.rst  mind_the_gaps.rst  mind_the_gaps.utils.rst  modules.rst
mind_the_gaps/: __init__.py  celerite_models.py  celerite_script.py  celerite_variance.ipynb  configs.py  fit_lcs.py  fitting.py  generate_lc.py  generate_lcs_goodness.py  generate_lcs_significance.py  gpmodelling.py  models_test.py  noise_models.py  readingutils.py  simulator.py  simulator_test.py  stats.py  stats_test.py  utils.py
mind_the_gaps/engines/: base_numpyro_engine.py  celerite2_engine copy.py  celerite2_engine.py  (+3 more)
notebooks/: celerite_variance.ipynb  lomb_scargle_biases.ipynb  poisson_level.ipynb  run_celerite.py  run_celerite2.py  run_celerite2_comparison_no_period.py  run_celerite2_comparison_spec.py  run_celerite2_no_period.py  run_celerite2_period.py  run_celerite_comparison_no_period.py  run_celerite_comparison_no_period_spec.py  run_celerite_no_period.py  tutorial.ipynb  tutorial_model_selection.ipynb  tutorial_ppp.ipynb  tutorial_ppp_celerite2.ipynb
scripts/: celerite_script.py  fit_lcs.py  generate_lc.py  generate_lcs.py  generate_lcs_goodness.py  generate_lcs_significance.py  generate_strategy.py  plot_ratio_test.py
tests/: gpmodelling_test.py  models_test.py  simulator_test.py  stats_test.py  test_gpmodelling.py  test_models.py  test_simulator.py  test_stats.py
(+53 files in other folders)
