[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mind-the-gaps"
dynamic = ["version"]
description = "Package for analysis of irregularly-sampled time series using Gaussian Processes modelling, with focus on period detection in irregularly-sampled time series showing stochastic variability."
readme = "README.md"
license = ""
authors = [
    { name = "Andres Gurpide", email = "andres.gurpide@gmail.com" },
]
keywords = [
    "???",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "astropy>=5.3.3",
    "celerite>=0.4.2",
    "corner>=2.2.2",
    "emcee==3.1.4",
    "lmfit==1.0.3",
    "numexpr>=2.8.7",
    "numpy>=1.24.4",
    "pyfftw>=0.13.0",
    "stingray==2.0.0rc1",
]

[project.urls]
Homepage = "https://github.com/andresgur/mind_the_gaps"

[tool.hatch.version]
path = "mind_the_gaps/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/mind_the_gaps",
]
