[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mind_the_gaps"
version = "1.0"
dependencies = [
    "stingray>=2.0.0rc1",
    "numpy>=1.24.4",
    "astropy>=5.3.3",
    "numexpr>=2.8.7",
    "emcee==3.1.4",
    "pyfftw>=0.13.0",
    "lmfit>=1.3.3",
    "celerite>=0.4.2",
    "corner>=2.2.2",
]
requires-python = ">=3.8"
authors = [
    {name = "Andres Gurpide", email = "andres.gurpide@gmail.com"},
]
description="Package for analysis of irregularly-sampled time series using Gaussian Processes modelling, with focus on period detection in irregularly-sampled time series showing stochastic variability."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
keywords = [
    "???",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Repository = "https://github.com/andresgur/mind_the_gaps"

[project.optional-dependencies]
test = [
    "pytest>=8.3.5"
]
docs = [
    "sphinx>=8.3.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autoapi>=3.6.0",
    "myst_parser>=4.0.1",
    "graphviz>=0.20.3",
    "nbsphinx>=0.9.7",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.sphinx]
title = "Mind the Gaps"
